--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -21,27 +21,14 @@
     <script src="/js/lib/jquery-2.1.1.min.js"></script>
     <script src="/js/lib/jquery-ui-1.10.4.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
-    <script src="/js/lib/underscore.min.js"></script>
-    <script src="/js/lib/backbone.min.js"></script>
     <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
     <script src="/js/plugins/customSelect/jquery.customSelect.min.js"></script>
     <script src="/js/lib/bootstrap-datepicker.js"></script>
 
-    <!-- Data Tables -->
-    <script src="/js/plugins/dataTables/jquery.dataTables.min.js"></script>
-    <script src="/js/plugins/dataTables/dataTables.bootstrap.min.js"></script>
-    <script src="/js/plugins/dataTables/dataTables.responsive.min.js"></script>
 
-    <!-- Custom and plugin javascript -->
-    <script src="/js/lib/inspinia.js"></script>
-    <script src="/js/plugins/pace/pace.min.js"></script>
-
-    <!-- md5 -->
-    <script src="/js/lib/md5.min.js"></script>
-
-    <!-- Chatpiper -->
-    <script src="/js/compiled/chatpiper_om.min.js" type="text/javascript"></script>
+    <!-- TechFest -->
+    <script src="/js/compiled/techfest.min.js" type="text/javascript"></script>
 
 </body>
 </html>
