adapted xhr function

--- a/resources/public/html/index.html
+++ b/resources/public/html/index.html
@@ -23,7 +23,9 @@
 
 
     <!-- TechFest -->
-    <script src="/js/compiled/techfest.min.js" type="text/javascript"></script>
+	<script src="/js/jquery.min.js" type="text/javascript"></script>
+	<script src="/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="/js/compiled/techfest.min.js" type="text/javascript"></script>
 
 </body>
 </html>
